--- a/proyectofinal/package.json
+++ b/proyectofinal/package.json
@@ -7,6 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
+    "build:front": "cd proyectofinal && ng build --prod",
+    "build:back": "cd backend-servidor && npm install && npm run build"
   },
   "private": true,
   "dependencies": {
